Fix: wrap paths in double quotes
- I realised I had forgotten to wrap the path in quotes.

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -1,13 +1,15 @@
 @font-face {
   font-family: "EB Garamond";
   font-style: normal;
-  src: url(assets/fonts/EBGaramond-VariableFont_wght.ttf) format("ttf");
+  weight: 400 800;
+  src: url("assets/fonts/EBGaramond-VariableFont_wght.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "EB Garamond Italic";
   font-style: italic;
-  src: url(assets/fonts/EBGaramond-Italic-VariableFont_wght.ttf) format("ttf");
+  weight: 400 800;
+  src: url("assets/fonts/EBGaramond-Italic-VariableFont_wght.ttf") format("ttf");
 }
 
 :root {
